// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownMenu /> Default story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item dropdown-menu__item--lined"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <a
        class="dropdown-menu__link"
        href="#"
      >
        Item 4
      </a>
    </li>
  </ul>
</div>
`;

exports[`<DropdownMenu /> WithDeleteButton story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item dropdown-menu__item--error"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Delete Item
      </button>
    </li>
  </ul>
</div>
`;

exports[`<DropdownMenu /> WithIcons story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#schedule"
          />
        </svg>
        Item 4
      </button>
    </li>
  </ul>
</div>
`;
